# Lizard-Old

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
.github/workflows/: ci-tests.yml
perft-tests/: positions.txt
src/: CMakeLists.txt  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  bitboard_constants.cpp  bitboard_constants.h  def.cpp  def.h  enum_operator.h  eval.cpp  eval.h  except.h  gamephase.cpp  gamephase.h  hash.cpp  init.cpp  magic.cpp  magic.h  main.cpp  movegen.cpp  movegen.h  msclock.cpp  msclock.h  perft.cpp  position.cpp  position.h  pv.cpp  pv.h  rand64.cpp  rand64.h  search.cpp  search.h  stack_vector.h  textutils.cpp  textutils.h  uci.cpp  uci.h
src/engine/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  bitboard_constants.cpp  bitboard_constants.h  def.cpp  def.h  eval.cpp  eval.h  fen.cpp  fen.h  hash.cpp  hash.h  init.cpp  init.h  magic.cpp  magic.h  movegen.h  perft.h  position.cpp  position.h  pv.cpp  search.cpp  textutils.cpp  textutils.h
src/misc/: enum_operator.cpp  enum_operator.h
tests/: CMakeLists.txt  bitboard-toolset.cpp  is-attacked-by.cpp  main.cpp  move-encoding.cpp  parse-fen.cpp  position-make-and-undo-move.cpp  position-make-move.cpp  position-piece-list.cpp  position-set-get.cpp  pv-store-probe.cpp  zobrist-hashing.cpp
